tests/snapshots/test_examples__fail__relations.fly.snap
---
source: tests/test_examples.rs
expression: stderr
---
verification errors:
error: assertion failure
   ┌─ examples/fail/relations.fly:13:1
   │
13 │ assert forall a:A b:A. q(a, b) -> a = b
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = counter example:
     p(@A_0) = false
     p(@A_1) = false
     p(@A_2) = true
     p(@A_3) = false
     q(@A_0,@A_0) = true
     q(@A_0,@A_1) = false
     q(@A_0,@A_2) = false
     q(@A_0,@A_3) = false
     q(@A_1,@A_0) = true
     q(@A_1,@A_1) = true
     q(@A_1,@A_2) = false
     q(@A_1,@A_3) = false
     q(@A_2,@A_0) = false
     q(@A_2,@A_1) = false
     q(@A_2,@A_2) = true
     q(@A_2,@A_3) = true
     q(@A_3,@A_0) = false
     q(@A_3,@A_1) = false
     q(@A_3,@A_2) = false
     q(@A_3,@A_3) = true
     a0 = @A_2


